# nmcscan

./: .dockerignore  .env.example  .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  compose.yaml  deployment.md  docker_compose.yml  exclude.conf  honeypots.conf  migrate_sqlite_to_pg.py
.github/workflows/: rust.yml
assets/: admin.html  index.html
assets/_app/: version.json
assets/_app/immutable/assets/: 0.N_ZX417k.css  0.eh7hnqyS.css
assets/_app/immutable/chunks/: 4w0DIYpK.js  62GfaLng.js  BKEmjRRa.js  BSvK7ERh.js  Bi98lwWq.js  C1rFpPqz.js  C2XGFkDu.js  C6uGYaVD.js  CBcJ5G4A.js  CNV7li2p.js  CsjFxGyZ.js  D-PantLF.js  DYjuiXy5.js  KeGdoKNk.js  VEPA-LBd.js  bfUYCWwg.js
assets/_app/immutable/entry/: app.CNyMIRXd.js  app.DACpHgSk.js  start.76J7ybbo.js  start.DjjbqXbD.js
assets/_app/immutable/nodes/: 0.DJe_hF6G.js  0.DmsBWOSr.js  1.BClu1gnC.js  1.IPajUVPA.js  2.DGuZpvBo.js  2.c1dYEnXZ.js  3.DbkJ-72y.js
dashboard/: Dockerfile  components.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html  hooks.server.ts
dashboard/src/lib/: db.ts  minecraft.ts  state.svelte.ts
dashboard/src/lib/components/: Dashboard.svelte  Landing.svelte  MinecraftText.svelte
dashboard/src/lib/components/ui/card/: card.svelte
dashboard/src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-sub-content.svelte
dashboard/src/lib/components/ui/scroll-area/: scroll-area.svelte
dashboard/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
dashboard/src/routes/(app)/: +layout.server.ts  +layout.svelte
dashboard/src/routes/(app)/explore/: +page.svelte
dashboard/src/routes/(app)/explore/account/: +page.svelte
dashboard/src/routes/(app)/explore/asns/: +page.svelte
dashboard/src/routes/(app)/explore/players/: +page.svelte
dashboard/src/routes/(app)/explore/servers/: +page.svelte
dashboard/src/routes/(app)/explore/servers/[ip]/: +page.svelte
dashboard/src/routes/(public)/: +page.server.ts  +page.svelte
dashboard/src/routes/(public)/login/: +page.svelte
dashboard/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.svelte
dashboard/src/routes/admin/account/: +page.server.ts  +page.svelte
dashboard/src/routes/admin/asns/: +page.svelte
dashboard/src/routes/admin/exclusions/: +page.svelte
dashboard/src/routes/admin/players/: +page.svelte
dashboard/src/routes/admin/scanner/: +page.svelte
dashboard/src/routes/admin/servers/: +page.svelte
dashboard/src/routes/admin/servers/[ip]/: +page.svelte
dashboard/src/routes/admin/users/: +page.server.ts  +page.svelte
dashboard/src/routes/api/[...path]/: +server.ts
dashboard/src/routes/login/: +page.svelte
docs/: ARCHITECTURE.md  SCANNER_ARCHITECTURE.md
docs/superpowers/plans/: 2026-03-20-minecraft-server-scanner.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260328_000002_add_performance_indexes.rs  m20260329_000003_create_api_keys.rs  m20260329_000004_cleanup_ignored_servers.rs  m20260331_000005_add_scan_epoch.rs  m20260402_000006_add_login_and_flags.rs  m20260406_000007_create_minecraft_accounts.rs  m20260406_000008_optimize_database_types.rs  m20260408_000009_add_scaling_indexes.rs  m20260413_000010_add_created_at.rs  m20260413_000011_create_exclusions.rs
src/: api.rs  asn.rs  asn_fetcher.rs  db.rs  exclude.rs  main.rs  raknet.rs  scanner.rs  scheduler.rs  slp.rs  test_mode.rs
src.deprecated/handlers/: api_keys.rs  minecraft_accounts.rs
src.deprecated/models/: mod.rs
src.deprecated/models/entities/: accounts.rs  api_keys.rs  daily_stats.rs  minecraft_accounts.rs  server_history.rs  sessions.rs
src.deprecated/network/: raknet.rs
src.deprecated/repositories/: api_keys.rs  servers.rs  stats.rs
src.deprecated/services/: login_queue.rs  mod.rs
src.deprecated/utils/: exclude.rs  mod.rs
src/entities/: accounts.rs  daily_stats.rs  mod.rs  servers.rs  sessions.rs  users.rs  verification_token.rs
src/handlers/: api_keys.rs  minecraft_accounts.rs  mod.rs
src/models/: asn.rs
src/models/entities/: asn_ranges.rs  asn_stats.rs  mod.rs  server_history.rs  server_players.rs  servers.rs
src/network/: login.rs  mod.rs  raknet.rs  scanner.rs  slp.rs
src/repositories/: api_keys.rs  asns.rs  minecraft_accounts.rs  mod.rs  servers.rs  stats.rs
src/services/: asn_fetcher.rs  login_queue.rs  mod.rs  scheduler.rs
src/utils/: exclude.rs  mod.rs  query_parser.rs  test_mode.rs
