[package]
name = "nmcscan"
version = "0.1.0"
edition = "2021"
description = "High-performance Minecraft Server Scanner with priority-based scanning"
license = "MIT"

[dependencies]
# Async runtime (minimal features for faster compilation)
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }

# Database (minimal features)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking & IP parsing
tokio-util = { version = "0.7", features = ["io"] }
ipnetwork = "0.20"

# HTTP client (use rustls instead of openssl for significantly faster builds)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
maxminddb = "0.27"
tar = "0.4"
flate2 = "1.0"

# CLI argument parsing (minimal features)
clap = { version = "4.5", default-features = false, features = ["derive", "env", "std", "help", "usage"] }
rand = "0.8"
dotenvy = "0.15.7"

[profile.dev]
opt-level = 0
debug = true
# Speed up dev builds by disabling some debug info if needed
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO is much faster than full LTO with similar benefits
strip = true
codegen-units = 1
panic = "abort" # Reduces binary size and improves performance slightly
