[workspace]
members = [".", "migration"]

[package]
name = "nmcscan"
version = "0.1.0"
edition = "2021"
description = "High-performance Minecraft Server Scanner with priority-based scanning"
license = "MIT"

[dependencies]
# Async runtime (minimal features for faster compilation)
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }

# Web server
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "query"] }
tower-http = { version = "0.6", default-features = false, features = ["compression-gzip", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking & IP parsing
ipnetwork = "0.20"

# HTTP client (use rustls instead of openssl for significantly faster builds)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "std"] }

# Utilities
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
maxminddb = "0.27"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

# CLI argument parsing (minimal features)
clap = { version = "4.5", default-features = false, features = ["derive", "env", "std", "help", "usage"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1.19", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres"] }
migration = { version = "0.1.0", path = "migration" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 16
panic = "abort"
